@@ -1,3 +1,7 @@
+1998-07-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* module.cc (draw_clock): Use glXXXf functions instead of glXXXd.
+
 1998-07-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* glclock.cc: Update the FSF address.
